force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/Global_Site_Part_Parameters_PPS__c.object-meta.xml
<CustomObject>
    <label>Global Site Part Parameters (PPS)</label>
    <nameField>
        <label>Global Site Part Parameters (PPS)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Site Part Parameters (PPS)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>