force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/LeadTimeUL__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeUL__c</fullName>
    <label>LeadTimeUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>