force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/PPS_VendoNo__c.field-meta.xml
<CustomField>
    <fullName>PPS_VendoNo__c</fullName>
    <label>PPS_VendoNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>