force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/Primary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor__c</fullName>
    <label>Primary_Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>