force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/PurchaseSite__c.field-meta.xml
<CustomField>
    <fullName>PurchaseSite__c</fullName>
    <label>PurchaseSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>