force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/SITE__c.field-meta.xml
<CustomField>
    <fullName>SITE__c</fullName>
    <label>SITE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>