force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/VendorLTLL__c.field-meta.xml
<CustomField>
    <fullName>VendorLTLL__c</fullName>
    <label>VendorLTLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>