force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/VendorLTUL__c.field-meta.xml
<CustomField>
    <fullName>VendorLTUL__c</fullName>
    <label>VendorLTUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>