force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/fields/VendorSite__c.field-meta.xml
<CustomField>
    <fullName>VendorSite__c</fullName>
    <label>VendorSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>