force-app/main/default/objects/Global_Site_Part_Parameters_PPS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SITE__c</columns>
    <columns>LeadTimeLL__c</columns>
    <columns>LeadTimeUL__c</columns>
    <columns>VendorSite__c</columns>
    <columns>VendorLTLL__c</columns>
    <columns>VendorLTUL__c</columns>
    <columns>PurchaseSite__c</columns>
    <columns>PPS_VendoNo__c</columns>
    <columns>Primary_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>